--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "firebase": "^12.2.1"
+    "@google/genai": "^1.18.0",
+    "firebase": "^12.2.1",
+    "@firebase/auth": "^1.11.0",
+    "@firebase/app": "^0.14.2",
+    "@firebase/storage": "^0.14.0",
+    "@firebase/firestore": "^4.9.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
